--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from utils import defaultCityDistricts, defaultCityDistrictsTrendDict, mkdir\n",
+    "from utils import mkdir, getSchoolYear\n",
     "import trends\n",
     "\n",
     "import classroom\n",
@@ -36,52 +27,114 @@
     "import meeting\n",
     "import exams\n",
     "import surveys\n",
-    "import attendance\n"
+    "import attendance\n",
+    "import parameters\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating schedule for 7 days between 2022-06-27 and 2022-09-5\n",
-      "Starting at 2024-04-14 23:35:45.134117\n",
+      "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
+      "Starting at 2024-04-15 14:43:09\n",
       "\n",
-      "|2022-06-27|>>>|2022-06-27|>>>|2022-09-5|14.29%   ETC:0:00:03s\n",
-      "|2022-06-27|>>>|2022-06-28|>>>|2022-09-5|28.57%   ETC:0:00:02s\n",
-      "|2022-06-27|>>>|2022-06-29|>>>|2022-09-5|42.86%   ETC:0:00:02s\n",
-      "|2022-06-27|>>>|2022-06-30|>>>|2022-09-5|57.14%   ETC:0:00:01s\n",
-      "|2022-06-27|>>>|2022-09-01|>>>|2022-09-5|71.43%   ETC:0:00:01s\n",
-      "|2022-06-27|>>>|2022-09-02|>>>|2022-09-5|85.71%   ETC:0:00:00s\n",
-      "|2022-06-27|>>>|2022-09-05|>>>|2022-09-5|100.0%   ETC:0:00:00s\n"
+      "|2020-06-20|>>>|2020-09-10|>>>|2020-09-10|100.0%   ETC:0:00:00s   \n",
+      "\n",
+      "Finished at 2024-04-15 14:43:17\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# This cell generates data\n",
-    "\"\"\"\n",
-    "May enter infinite loop if:\n",
-    "  - not enough teachers are generated\n",
-    "  - not enough students are generated\n",
-    "  - not enough classrooms are generated\n",
-    "  - too many courses per day need to be scheduled\n",
-    "if that happens restart the kernel, adjust tuple counts, and run the code again\n",
-    "\"\"\"\n",
+    "\n",
+    "df_classrooms = classroom.generate(\n",
+    "    count=parameters.classroom_count,\n",
+    "    maxRoomNumber=parameters.classroom_max_number,\n",
+    "    MinMaxCapacity=parameters.classroom_min_max_capacity,\n",
+    "    MaxMaxCapacity=parameters.classroom_max_max_capacity,\n",
+    ")\n",
+    "\n",
+    "df_teachers = teachers.generate(\n",
+    "    count=parameters.teacher_count,\n",
+    "    minAge=parameters.teacher_min_age,\n",
+    "    maxAge=parameters.teacher_max_age,\n",
+    "    cityDistricts=parameters.default_city_districts,\n",
+    "    subjects=parameters.default_course_names,\n",
+    ")\n",
+    "\n",
+    "df_courses = course.generate(\n",
+    "    count=parameters.course_count,\n",
+    "    maxSchoolYears=parameters.max_school_years,\n",
+    "    courseNames=parameters.default_course_names,\n",
+    "    df_teachers=df_teachers,\n",
+    ")\n",
+    "\n",
+    "df_classes, df_courses = aClass.generate(\n",
+    "    count=parameters.class_count,\n",
+    "    courseCount=parameters.course_count,\n",
+    "    maxSchoolYears=parameters.max_school_years,\n",
+    "    presentYear=getSchoolYear(parameters.start_date),\n",
+    "    specializations=parameters.default_specializations,\n",
+    "    df_teachers=df_teachers,\n",
+    "    df_courses=df_courses,\n",
+    ")\n",
+    "\n",
+    "df_students = students.generate(\n",
+    "    count=parameters.student_count,\n",
+    "    minAge=parameters.student_min_age,\n",
+    "    cityDistricts=parameters.default_city_districts,\n",
+    "    classes=df_classes,\n",
+    ")\n",
     "\n",
     "\n",
-    "df_classrooms = classroom.generate(357, 999)\n",
-    "df_teachers = teachers.generate(300)\n",
-    "df_courses = course.generate(300, df_teachers)\n",
-    "df_classes, df_courses = aClass.generate(10, df_teachers, df_courses)\n",
-    "df_students = students.generate(800, df_classes)\n",
-    "df_meetings = meeting.generate(0, df_courses, df_classrooms, df_classes, \"2022-06-27\", \"2022-09-5\")\n",
-    "df_exams = exams.generate(0, df_meetings, df_students)\n",
-    "df_surveys = surveys.generate(0, df_meetings, df_students, df_courses)\n",
-    "df_attendance = attendance.generate(0, df_meetings, df_students, df_teachers, df_courses)"
+    "df_meetings = meeting.generate(\n",
+    "    count=parameters.meeting_count,\n",
+    "    startDate=parameters.start_date,\n",
+    "    endDate=parameters.end_date,\n",
+    "    schoolStart=parameters.school_start_hour,\n",
+    "    schoolEnd=parameters.school_end_hour,\n",
+    "    maxSchoolYears=parameters.max_school_years,\n",
+    "    df_courses=df_courses,\n",
+    "    df_rooms=df_classrooms,\n",
+    "    df_classes=df_classes,\n",
+    ")\n",
+    "\n",
+    "df_exams = exams.generate(\n",
+    "    count=parameters.exam_count,\n",
+    "    minScore=parameters.exam_min_score,\n",
+    "    maxScore=parameters.exam_max_score,\n",
+    "    resolution=parameters.exam_resolution,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    ")\n",
+    "\n",
+    "df_surveys = surveys.generate(\n",
+    "    count=parameters.survey_count,\n",
+    "    minScore=parameters.survey_min_score,\n",
+    "    maxScore=parameters.survey_max_score,\n",
+    "    resolution=parameters.survey_resolution,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    "    df_courses=df_courses,\n",
+    ")\n",
+    "\n",
+    "df_attendance = attendance.generate(\n",
+    "    count=parameters.attendance_count,\n",
+    "    excusedProb=parameters.excused_prob,\n",
+    "    lateProb=parameters.late_prob,\n",
+    "    attendanceProb=parameters.attendance_prob,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    "    df_teachers=df_teachers,\n",
+    "    df_courses=df_courses,\n",
+    "    catchupTasks=parameters.default_catchup_tasks,\n",
+    ")"
    ]
   },
   {
@@ -93,31 +146,10 @@
     "#This cell adds trend: people from different city districts have different scores\n",
     "\n",
     "df_housing_trend = df_students.copy()\n",
-    "df_housing_trend[\"score\"] = df_housing_trend[\"CityDistrict\"].map(defaultCityDistrictsTrendDict)/50\n",
+    "df_housing_trend[\"score\"] = df_housing_trend[\"CityDistrict\"].map(parameters.default_city_districts_trend_dict)/50\n",
     "df_housing_trend = df_housing_trend[[\"sID\", \"score\"]]\n",
     "trendDict = { sID: score for sID, score in zip(df_housing_trend[\"sID\"], df_housing_trend[\"score\"]) }\n",
     "trends.addTrendAdditive(df_surveys, \"sID\", trendDict , \"Score\", 0, 20)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#This cell loads data from csv files\n",
-    "\n",
-    "path = \"data\"\n",
-    "\n",
-    "df_classrooms = pd.read_csv(f\"{path}/classrooms.csv\")\n",
-    "df_teachers = pd.read_csv(f\"{path}/teachers.csv\")\n",
-    "df_courses = pd.read_csv(f\"{path}/courses.csv\")\n",
-    "df_classes = pd.read_csv(f\"{path}/classes.csv\")\n",
-    "df_students = pd.read_csv(f\"{path}/students.csv\")\n",
-    "df_meetings = pd.read_csv(f\"{path}/meetings.csv\")\n",
-    "df_exams = pd.read_csv(f\"{path}/exams.csv\")\n",
-    "df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
-    "df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
    ]
   },
   {
@@ -173,7 +205,7 @@
     }
    ],
    "source": [
-    "#This cell prepares data for database\n",
+    "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
     "path = \"data\"\n",
     "headers = False\n",
@@ -183,7 +215,7 @@
     "\n",
     "df_students.drop(columns=[\"iq\"]).to_csv(f\"{path}/students.csv\", index=indexing, header=headers)\n",
     "df_classes.drop(columns=[\"Year\", \"courses\"]).to_csv(f\"{path}/classes.csv\", index=indexing, header=headers)\n",
-    "df_teachers.to_csv(f\"{path}/teachers.csv\", index=indexing, header=headers)\n",
+    "df_teachers.drop(columns=[\"Subject\"]).to_csv(f\"{path}/teachers.csv\", index=indexing, header=headers)\n",
     "df_courses.to_csv(f\"{path}/courses.csv\", index=indexing, header=headers)\n",
     "df_classrooms.to_csv(f\"{path}/classrooms.csv\", index=indexing, header=headers)\n",
     "df_meetings.drop(columns=[\"StartHour\", \"EndHour\", \"Year\", \"Month\"]).to_csv(f\"{path}/meetings.csv\", index=indexing, header=headers)\n",
@@ -219,6 +251,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell loads data from csv files.\n",
+    "\n",
+    "path = \"data\"\n",
+    "\n",
+    "df_classrooms = pd.read_csv(f\"{path}/classrooms.csv\")\n",
+    "df_teachers = pd.read_csv(f\"{path}/teachers.csv\")\n",
+    "df_courses = pd.read_csv(f\"{path}/courses.csv\")\n",
+    "df_classes = pd.read_csv(f\"{path}/classes.csv\")\n",
+    "df_students = pd.read_csv(f\"{path}/students.csv\")\n",
+    "df_meetings = pd.read_csv(f\"{path}/meetings.csv\")\n",
+    "df_exams = pd.read_csv(f\"{path}/exams.csv\")\n",
+    "df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
+    "df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -231,17 +284,19 @@
     }
    ],
    "source": [
+    "#This cell generates random updates for database\n",
+    "\n",
     "path = \"updates\"\n",
     "\n",
     "mkdir(path)\n",
     "\n",
     "df = df_teachers.sample(n=15)\n",
-    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in defaultCityDistricts if y != x]))\n",
+    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in parameters.default_city_districts if y != x]))\n",
     "df[\"update\"] = df.apply(lambda x: f\"Update Teachers SET CityDistrict = '{x['CityDistrict2']}' WHERE tID = {x['tID']};\", axis=1)\n",
     "df[\"update\"].to_csv(f\"{path}/updateTeachersCity.sql\", index=False, header=False)\n",
     "\n",
     "df = df_students.sample(n=15)\n",
-    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in defaultCityDistricts if y != x]))\n",
+    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in parameters.default_city_districts if y != x]))\n",
     "df[\"update\"] = df.apply(lambda x: f\"Update Students SET CityDistrict = '{x['CityDistrict2']}' WHERE sID = {x['sID']};\", axis=1)\n",
     "df[\"update\"].to_csv(f\"{path}/updateStudentsCity.sql\", index=False, header=False)\n",
     "\n",
@@ -255,13 +310,6 @@
     "df[\"update\"] = df.apply(lambda x: f\"Update Class SET tID = '{x['tID']}' WHERE ClassName = '{x['ClassName']}';\", axis=1)\n",
     "df[\"update\"].to_csv(f\"{path}/updateClassesTeacher.sql\", index=False, header=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
