--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,11 +40,11 @@
      "output_type": "stream",
      "text": [
       "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
-      "Starting at 2024-04-15 18:33:40\n",
+      "Starting at 2024-04-15 19:44:39\n",
       "\n",
       "|2020-06-20|>>>|2020-09-10|>>>|2020-09-10|100.0%   ETC:0:00:00s   \n",
       "\n",
-      "Finished at 2024-04-15 18:33:50\n",
+      "Finished at 2024-04-15 19:44:48\n",
       "\n"
      ]
     }
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +146,7 @@
      "output_type": "stream",
      "text": [
       "Removed 0 unused classrooms\n",
-      "Removed 91 unused teachers\n",
+      "Removed 89 unused teachers\n",
       "Removed 0 unused courses\n",
       "Removed 0 unused classes\n"
      ]
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,21 +187,7 @@
     "df_housing_trend[\"score\"] = df_housing_trend[\"CityDistrict\"].map(parameters.default_city_districts_trend_dict)/50\n",
     "df_housing_trend = df_housing_trend[[\"sID\", \"score\"]]\n",
     "trendDict = { sID: score for sID, score in zip(df_housing_trend[\"sID\"], df_housing_trend[\"score\"]) }\n",
-    "addTrend(df_surveys, \"sID\", trendDict , \"Score\", 0, 20, parameters.survey_resolution)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#This cell adds trend: teachers influence the scores of their students\n",
-    "\n",
-    "teacherTrendDict = {tID: score for tID, score in zip(df_teachers[\"tID\"], np.random.uniform(-2, 5, len(df_teachers)))}\n",
-    "df_meeting_teachers = df_meetings.merge(df_courses, left_on=\"cID\", right_on=\"cID\", how=\"left\")[[\"mID\", \"tID\"]]\n",
-    "trendDict = { mID: teacherTrendDict[tID] for mID,tID in df_meeting_teachers.values}\n",
-    "addTrend(df_exams, \"mID\", trendDict, \"Score\", 0, 50, parameters.exam_resolution)"
+    "addTrend(df_surveys, \"sID\", trendDict , \"Score\", parameters.survey_min_score, parameters.survey_max_score, parameters.survey_resolution)\n"
    ]
   },
   {
@@ -219,27 +196,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This cell adds trend: room where the exam was taken influences the score\n",
+    "#This cell adds trend: teachers influence the scores of their students\n",
     "\n",
-    "roomTrendDict = {roomNumber: score for roomNumber, score in zip(df_classrooms[\"RoomNumber\"], np.random.uniform(-5, 5, len(df_classrooms)))}\n",
-    "df_meeting_rooms = df_meetings[[\"mID\", \"RoomNumber\"]]\n",
-    "trendDict = { mID: roomTrendDict[rID] for mID,rID in df_meeting_rooms.values}\n",
-    "addTrend(df_exams, \"mID\", trendDict, \"Score\", 0, 50, parameters.exam_resolution)"
+    "teacherTrendDict = {tID: score for tID, score in zip(df_teachers[\"tID\"], np.random.uniform(-2, 5, len(df_teachers)))}\n",
+    "df_meeting_teachers = df_meetings.merge(df_courses, left_on=\"cID\", right_on=\"cID\", how=\"left\")[[\"mID\", \"tID\"]]\n",
+    "trendDict = { mID: teacherTrendDict[tID] for mID,tID in df_meeting_teachers.values}\n",
+    "addTrend(df_exams, \"mID\", trendDict, \"Score\", parameters.exam_min_score, parameters.exam_max_score, parameters.exam_resolution)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory data already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: room where the exam was taken influences the score\n",
+    "\n",
+    "roomTrendDict = {roomNumber: score for roomNumber, score in zip(df_classrooms[\"RoomNumber\"], np.random.uniform(-5, 5, len(df_classrooms)))}\n",
+    "df_meeting_rooms = df_meetings[[\"mID\", \"RoomNumber\"]]\n",
+    "trendDict = { mID: roomTrendDict[rID] for mID,rID in df_meeting_rooms.values}\n",
+    "addTrend(df_exams, \"mID\", trendDict, \"Score\", parameters.exam_min_score, parameters.exam_max_score, parameters.exam_resolution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
@@ -304,47 +287,6 @@
     "df_exams = pd.read_csv(f\"{path}/exams.csv\")\n",
     "df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
     "df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory updates already exists\n"
-     ]
-    }
-   ],
-   "source": [
-    "#This cell generates random updates for database\n",
-    "\n",
-    "path = \"updates\"\n",
-    "\n",
-    "mkdir(path)\n",
-    "\n",
-    "df = df_teachers.sample(n=15)\n",
-    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in parameters.default_city_districts if y != x]))\n",
-    "df[\"update\"] = df.apply(lambda x: f\"Update Teachers SET CityDistrict = '{x['CityDistrict2']}' WHERE tID = {x['tID']};\", axis=1)\n",
-    "df[\"update\"].to_csv(f\"{path}/updateTeachersCity.sql\", index=False, header=False)\n",
-    "\n",
-    "df = df_students.sample(n=15)\n",
-    "df[\"CityDistrict2\"] = df[\"CityDistrict\"].apply(lambda x: np.random.choice([y for y in parameters.default_city_districts if y != x]))\n",
-    "df[\"update\"] = df.apply(lambda x: f\"Update Students SET CityDistrict = '{x['CityDistrict2']}' WHERE sID = {x['sID']};\", axis=1)\n",
-    "df[\"update\"].to_csv(f\"{path}/updateStudentsCity.sql\", index=False, header=False)\n",
-    "\n",
-    "df = df_students.sample(n=15)\n",
-    "df[\"ClassName2\"] = df[\"ClassName\"].apply(lambda x: np.random.choice([y for y in df_classes[\"ClassName\"].unique() if y != x]))\n",
-    "df[\"update\"] = df.apply(lambda x: f\"Update Students SET ClassName = '{x['ClassName']}' WHERE sID = {x['sID']};\", axis=1)\n",
-    "df[\"update\"].to_csv(f\"{path}/updateStudentsClass.sql\", index=False, header=False)\n",
-    "\n",
-    "df = df_classes.sample(n=15)\n",
-    "df[\"tID2\"] = df[\"tID\"].apply(lambda x: np.random.choice([y for y in df_classes[\"ClassName\"].unique() if y != x]))\n",
-    "df[\"update\"] = df.apply(lambda x: f\"Update Class SET tID = '{x['tID']}' WHERE ClassName = '{x['ClassName']}';\", axis=1)\n",
-    "df[\"update\"].to_csv(f\"{path}/updateClassesTeacher.sql\", index=False, header=False)"
    ]
   }
  ],
