--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from utils import mkdir, getSchoolYear, addTrend\n",
+    "from utils import mkdir, getSchoolYear, addTrend, splitDf\n",
     "import parameters\n",
     "\n",
     "import classroom\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +88,8 @@
     "    classes=df_classes,\n",
     ")\n",
     "\n",
+    "df_students, df_students_old = splitDf(df_students)\n",
+    "\n",
     "\n",
     "df_meetings = meeting.generate(\n",
     "    count=parameters.meeting_count,\n",
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -152,9 +145,9 @@
      "output_type": "stream",
      "text": [
       "Removed 0 unused classrooms\n",
-      "Removed 1 unused teachers\n",
-      "Removed 0 unused courses\n",
-      "Removed 6 unused classes\n"
+      "Removed 0 unused teachers\n",
+      "Removed 31 unused courses\n",
+      "Removed 0 unused classes\n"
      ]
     }
    ],
@@ -183,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,21 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory data already exists\n"
+      "Directory data2 already exists\n"
      ]
     }
    ],
    "source": [
     "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
-    "path = \"data\"\n",
+    "path = \"data2\"\n",
     "headers = False\n",
     "indexing = False\n",
     "\n",
@@ -259,9 +252,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory backup already exists\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_students' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m indexing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      7\u001b[0m mkdir(path)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mdf_students\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/students.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n\u001b[0;32m     10\u001b[0m df_classes\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/classes.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n\u001b[0;32m     11\u001b[0m df_teachers\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/teachers.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_students' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#This cell prepares data for backup, in format not suitable for database\n",
     "\n",
@@ -284,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#This cell loads data from csv files.\n",
     "\n",
-    "path = \"data\"\n",
+    "path = \"backup\"\n",
     "\n",
     "df_classrooms = pd.read_csv(f\"{path}/classrooms.csv\")\n",
     "df_teachers = pd.read_csv(f\"{path}/teachers.csv\")\n",
@@ -302,6 +314,120 @@
     "df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
     "df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating schedule for 202 days between 2020-09-10 and 2021-06-20\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# df_students = pd.concat([df_students, df_students_old])\n",
+    "\n",
+    "df_meetings = meeting.generate(\n",
+    "    count=parameters.meeting_count,\n",
+    "    startDate=parameters.start_date,\n",
+    "    endDate=parameters.end_date,\n",
+    "    schoolStart=parameters.school_start_hour,\n",
+    "    schoolEnd=parameters.school_end_hour,\n",
+    "    maxSchoolYears=parameters.max_school_years,\n",
+    "    df_courses=df_courses,\n",
+    "    df_rooms=df_classrooms,\n",
+    "    df_classes=df_classes,\n",
+    ")\n",
+    "\n",
+    "df_exams = exams.generate(\n",
+    "    count=parameters.exam_count,\n",
+    "    minScore=parameters.exam_min_score,\n",
+    "    maxScore=parameters.exam_max_score,\n",
+    "    resolution=parameters.exam_resolution,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    ")\n",
+    "\n",
+    "df_surveys = surveys.generate(\n",
+    "    count=parameters.survey_count,\n",
+    "    minScore=parameters.survey_min_score,\n",
+    "    maxScore=parameters.survey_max_score,\n",
+    "    resolution=parameters.survey_resolution,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    "    df_courses=df_courses,\n",
+    ")\n",
+    "\n",
+    "df_attendance = attendance.generate(\n",
+    "    count=parameters.attendance_count,\n",
+    "    excusedProb=parameters.excused_prob,\n",
+    "    lateProb=parameters.late_prob,\n",
+    "    attendanceProb=parameters.attendance_prob,\n",
+    "    df_meetings=df_meetings,\n",
+    "    df_students=df_students,\n",
+    "    df_teachers=df_teachers,\n",
+    "    df_courses=df_courses,\n",
+    "    catchupTasks=parameters.default_catchup_tasks,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data2/exams.csv\", header=None)\n",
+    "df[0] = df[0] + 10000\n",
+    "df.to_csv(\"data2/exams.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data2/surveys.csv\", header=None)\n",
+    "df[0] = df[0] + 10000\n",
+    "df.to_csv(\"data2/surveys.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data2/attendance.csv\", header=None)\n",
+    "df[7] = df[7] + 10000\n",
+    "df.to_csv(\"data2/attendance.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data2/meetings.csv\", header=None)\n",
+    "df[0] = df[0] + 10000\n",
+    "df.to_csv(\"data2/meetings.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
